--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </header>
     <body onload="onLoad()">
         <h1>
-            Meu IP!!!
+            Meu IP!
         </h1>
 
         <div id="data"></div>
