--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <html>
     <header>
-        <title>
-            Meu Ip
-        </title>
+        <title>Meu Ip</title>
         <script type="text/javascript">
             var HttpClient = function() {
                 this.get = function(cUrl, aCallback) {
@@ -28,7 +26,7 @@
         <script type="text/javascript">
             function onLoad() {
                 aClient = new HttpClient();
-                aClient.get('http://localhost:8080/data', function(response) {
+                aClient.get(window.location.href+'data', function(response) {
                     document.getElementById("data").innerHTML = response;
                 });
             };
