--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <script type="text/javascript">
             function onLoad() {
                 aClient = new HttpClient();
-                aClient.get(window.location.href+'data', function(response) {
+                aClient.get(window.location.href+'/data', function(response) {
                     document.getElementById("data").innerHTML = response;
                 });
             };
