Pulado linha entre registros

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                         html +=     '<br>Data: ' + data[key].date + '</br>'
                         html +=     '<br>Ip: ' + data[key].ip + '</br>'
                         html += '</div>'
+                        html += '</br>'
                     }
                     document.getElementById("data").innerHTML = html;
                 });
