--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <html>
     <header>
         <title>Meu Ip</title>
+        <style>
+            body {
+                background-color: rgba(36, 36, 36, 36);
+                color: white
+            }
+        </style>
         <script type="text/javascript">
             var HttpClient = function() {
                 this.get = function(cUrl, aCallback) {
